# Proiect

Proiect Java/ExamenPractic/src/: Main.java
Proiect Java/ExamenPractic/src/domain/: Bursa.java  BursaValidator.java  Validator.java  ValidatorException.java
Proiect Java/ExamenPractic/src/repository/: Repository.java
Proiect Java/ExamenPractic/src/service/: Service.java
Proiect Java/ExamenPractic/src/ui/: Ui.java
Proiect-Python/: cardClient.json  main.py  masini.json  test-cardClienti.json  test-masini.json  test-tranzactii.json  tranzactie.json
Proiect-Python/Domain/: addOperation.py  cardClientValidator.py  masina.py  masinaValidator.py  tranzactie.py  undoRedoOperation.py
Proiect-Python/Repository/: repositoryJson.py
Proiect-Python/Service/: cardClientService.py  masinaService.py  tranzactieService.py  undoRedoService.py
Proiect-Python/Teste/: tests.py
Proiect-Python/UI/: consola.py
ProiectSDA/: CMakeLists.txt  main.cpp
ProiectSDA/Domain/: Dictionary.h  Friendship.cpp  Friendship.h  List.h  Node.h  User.cpp  User.h
ProiectSDA/RepositoryFile/: Repository.cpp  Repository.h
ProiectSDA/Service/: Service.cpp  Service.h
ProiectSDA/UI/: UI.cpp  UI.h
